--- a/simpleform.html
+++ b/simpleform.html
@@ -35,6 +35,7 @@
           <div>
             <label for="tel">tel input type: </label>
             <input type="tel" id="tel" name="tel">
+            <error-output class="tel-error" for="tel"></error-output>
           </div>
           <div>
             <label for="search">search input type: </label>
@@ -82,6 +83,19 @@
             emailError.textContent='';
         else
             emailError.textContent="email is incorrect";
+    }
+    );
+
+
+    const mobile= document.querySelector('#tel');
+    const mobileError= document.querySelector('.tel-error');
+    tel.addEventListener('input',
+    ()=>{
+        let telRegex= RegExp('^[0-9]{2}[ ][0-9]{10}$');
+        if(telRegex.test(mobile.value))
+            mobileError.textContent='';
+        else
+            mobileError.textContent="Mobile no. is incorrect";
     }
     );
 
